--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,21 +1,25 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>My Account</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="alert alert-error">
+    <%= devise_error_messages! %>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Register" %></div>
+  <div class="span2"><%= f.label :email %></div>
+  <div class="span6"><%= f.email_field :email %></div>
+  <div class="clear"></div>
+  <div class="span2"><%= f.label :password %></div>
+  <div class="span6"><%= f.password_field :password, :autocomplete => "off" %> <i>(leave blank if you don't want to change it)</i></div>
+  <div class="clear"></div>
+  <div class="span2"><%= f.label :password_confirmation %></div>
+  <div class="span6"><%= f.password_field :password_confirmation %></div>
+  <div class="clear"></div>
+  <div class="span2"><%= f.label :current_password %></div>
+  <div class="span8"><%= f.password_field :current_password %> <i>(we need your current password to confirm your changes)</i></div>
+  <div class="clear"></div>
+  <div class="span2">&nbsp;</div>
+  <div class="span6"><%= f.submit "Register", :class => "btn" %></div>
+  <div class="clear"></div>
 <% end %>
 
 <h3>Cancel my account</h3>
