social - fixed message posting

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -31,6 +31,7 @@
       <%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :id => "tabs", :class => "nav" }) do |tab| %>
         <%= tab.home      'Home', root_path %>
         <%= tab.dashboard 'Dashboard', "/dashboard" %>
+        <%= tab.friends 'Friends', "/friends" %>
         <%= tab.account   'My Account', edit_user_registration_path %>
       <% end %>
     </div>
