--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,3 @@
-<%= image_tag @graph.get_picture("me") %>
+<%= image_tag @graph.get_picture("me") if @graph %>
 Hello <%= acknowledge(current_user) %>!
 <br/>
